# Maker-Desktop-System

./: .gitignore  CMakeLists.txt  Kconfig  README.md  health_monitor.db  pyproject.toml
host/backend/: backend_start.sh  main.py
host/frontend/: index.html  package-lock.json  vite.config.js
keypad/: CMakeLists.txt  Kconfig  demo.c  tmp
keypad/cfg/: cfg.c  cfg.h
keypad/keypad/: keypad.c  keypad.h
keypad/util/: util_def.h  util_tool.c  util_tool.h
keypad_1v8/: CMakeLists.txt  demo.c
maker-desktop/: CMakeLists.txt  Kconfig  demo.c  demo_def.h
maker-desktop/host/backend/: pyproject.toml  requirements.txt  数据导入.txt
maker-desktop/host/backend/app/ai_aide/: ai.py  ai_aide.py  asr.py
maker-desktop/host/backend/app/ai_aide/core/: ai.py  record.py  tts.py
maker-desktop/host/backend/app/health/: health.py
maker-desktop/host/backend/app/offstage/: offstage.py
maker-desktop/host/backend/app/user/: __init__.py
maker-desktop/host/backend/config/: orm.py
maker-desktop/host/backend/migrations/models/: 0_20250731045404_init.py
maker-desktop/host/backend/model/: ai.py  health.py  user.py
patch/: CMakeLists.txt  Kconfig  btn-tasks.txt  chmod_com.sh  slave  spencerwmiles.vscode-task-buttons-1.3.1.vsix
quiz/: CMakeLists.txt  OLED.c  OLED.h  OLED_Font.h  README.md  RGB.c  RGB.h  main.c  main.h  my_def.h  my_tool.c  my_tool.h  my_tool_adc.c  my_tool_adc.h  my_tool_dog.c  my_tool_dog.h  my_tool_gpio.c  my_tool_gpio.h  my_tool_pwm.c  my_tool_pwm.h  my_tool_spi.c  my_tool_spi.h  my_tool_timer.c  my_tool_timer.h  myi2c.c  myi2c.h  myuart.c  myuart.h
(+430 files in other folders)
